--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
         <a href="/">オタ活</a>
         <ul>
           <li>
+            <%= link_to "会員登録", new_customer_registration_path %>
+          </li>
+          <li>
             <%= link_to "ログイン", new_customer_session_path %>
           </li>
           <li>
