--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
             <%= link_to "ログイン", new_customer_session_path %>
           </li>
           <li>
-            <%= link_to "ログアウト", destroy_customer_session_path %>
+            <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
           </li>
         </ul>
       </nav>
