--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,15 +15,24 @@
       <nav>
         <a href="/">オタ活</a>
         <ul>
+          <% if customer_signed_in? %>
+          <li>
+            <%= link_to "About", public_homes_about_path %>
+          </li>
+          <li>
+            <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
+          </li>
+          <% else %>
+          <li>
+            <%= link_to "About", public_homes_about_path %>
+          </li>
           <li>
             <%= link_to "会員登録", new_customer_registration_path %>
           </li>
           <li>
             <%= link_to "ログイン", new_customer_session_path %>
           </li>
-          <li>
-            <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
-          </li>
+          <% end %>
         </ul>
       </nav>
     </header>
